--- a/action.yml
+++ b/action.yml
@@ -22,9 +22,9 @@ runs:
     - name: Generate Test Scenario
       run: |
         ${{ github.action_path }}/lab${{ inputs.lab_number }}-parser \
-          -variant=${{ inputs.variant_number }}
-          -variants-path=${{ github.action_paths }}/variants/lab${{ inputs.lab_number }}.yml 
-          -wokwi-config=${{ inputs.wokwi_toml_path }} 
+          -variant=${{ inputs.variant_number }} \
+          -variants-path=${{ github.action_paths }}/variants/lab${{ inputs.lab_number }}.yml \
+          -wokwi-config=${{ inputs.wokwi_toml_path }} \
           -output=test_scenario.yml
         echo "Generated test scenario file: test_scenario.yml"
       shell:  bash
