--- a/action.yml
+++ b/action.yml
@@ -25,7 +25,8 @@ runs:
           -variant=${{ inputs.variant_number }} \
           -variants-path=${{ github.action_path }}/variants/lab${{ inputs.lab_number }}.yml \
           -wokwi-config=${{ inputs.wokwi_toml_path }} \
-          -output=test_scenario.yml
+          -output=test_scenario.yml \
+          -root-path=${{ github.action_path }}
         echo "Generated test scenario file: test_scenario.yml"
       shell:  bash
     - name: Set output
