--- a/action.yml
+++ b/action.yml
@@ -37,5 +37,5 @@ runs:
     - name: Set output
       id: set_output
       run: |
-        echo "test_scenario='${{ inputs.output }}'" >> $GITHUB_OUTPUT
+        echo "test_scenario='${{ inputs.output }}'" >> "$GITHUB_OUTPUT"
       shell:  bash
