Change logic of generating test scenrio
now you need the work's varinat, not the algorithm variant
also no more need to add led_deleay to wokwi.toml file

--- a/variants/lab1.yml
+++ b/variants/lab1.yml
@@ -1,25 +1,151 @@
 variants:
   - id: "1"
-    template: "templates/lab1-one-led-in-time.yml"
-    steps: "P0->P1->P2->P3->P4->P5->P6->P7"
+    algo:
+      variant: "1"
+      file: "variants/algo_leds.yml"
+    delay: "400ms"
   - id: "2"
-    template: "templates/lab1-one-led-in-time.yml"
-    steps: "P7->P6->P5->P4->P3->P2->P1->P0"
+    algo:
+      variant: "2"
+      file: "variants/algo_leds.yml"
+    delay: "450ms"
   - id: "3"
-    template: "templates/lab1-two-leds-in-time.yml"
-    steps: "P0->P7->P1->P6->P2->P5->P3->P4"
+    algo:
+      variant: "3"
+      file: "variants/algo_leds.yml"
+    delay: "500ms"
   - id: "4"
-    template: "templates/lab1-two-leds-in-time.yml"
-    steps: "P4->P3->P5->P2->P6->P1->P7->P0"
+    algo:
+      variant: "4"
+      file: "variants/algo_leds.yml"
+    delay: "550ms"
   - id: "5"
-    template: "templates/lab1-one-led-in-time.yml"
-    steps: "P0->P2->P4->P6->P1->P3->P5->P7"
+    algo:
+      variant: "5"
+      file: "variants/algo_leds.yml"
+    delay: "600ms"
   - id: "6"
-    template: "templates/lab1-one-led-in-time.yml"
-    steps: "P7->P5->P3->P1->P6->P4->P2->P0" 
+    algo:
+      variant: "6"
+      file: "variants/algo_leds.yml"
+    delay: "650ms"
   - id: "7"
-    template: "templates/lab1-one-led-in-time.yml"
-    steps: "P0->P7->P1->P6->P2->P5->P3->P4"
+    algo:
+      variant: "7"
+      file: "variants/algo_leds.yml"
+    delay: "700ms"
   - id: "8"
-    template: "templates/lab1-one-led-in-time.yml"
-    steps: "P7->P0->P6->P1->P5->P2->P4->P3"
+    algo:
+      variant: "8"
+      file: "variants/algo_leds.yml"
+    delay: "750ms"
+  - id: "9"
+    algo:
+      variant: "1"
+      file: "variants/algo_leds.yml"
+    delay: "800ms"
+  - id: "10"
+    algo:
+      variant: "2"
+      file: "variants/algo_leds.yml"
+    delay: "850ms"
+  - id: "11"
+    algo:
+      variant: "3"
+      file: "variants/algo_leds.yml"
+    delay: "900ms"
+  - id: "12"
+    algo:
+      variant: "4"
+      file: "variants/algo_leds.yml"
+    delay: "950ms"
+  - id: "13"
+    algo:
+      variant: "5"
+      file: "variants/algo_leds.yml"
+    delay: "1000ms"
+  - id: "14"
+    algo:
+      variant: "6"
+      file: "variants/algo_leds.yml"
+    delay: "1050ms"
+  - id: "15"
+    algo:
+      variant: "7"
+      file: "variants/algo_leds.yml"
+    delay: "1100ms"
+  - id: "16"
+    algo:
+      variant: "8"
+      file: "variants/algo_leds.yml"
+    delay: "1150ms"
+  - id: "17"
+    algo:
+      variant: "1"
+      file: "variants/algo_leds.yml"
+    delay: "1200ms"
+  - id: "18"
+    algo:
+      variant: "2"
+      file: "variants/algo_leds.yml"
+    delay: "400ms"
+  - id: "19"
+    algo:
+      variant: "3"
+      file: "variants/algo_leds.yml"
+    delay: "450ms"
+  - id: "20"
+    algo:
+      variant: "4"
+      file: "variants/algo_leds.yml"
+    delay: "500ms"
+  - id: "21"
+    algo:
+      variant: "5"
+      file: "variants/algo_leds.yml"
+    delay: "550ms"
+  - id: "22"
+    algo:
+      variant: "6"
+      file: "variants/algo_leds.yml"
+    delay: "600ms"
+  - id: "23"
+    algo:
+      variant: "7"
+      file: "variants/algo_leds.yml"
+    delay: "650ms"
+  - id: "24"
+    algo:
+      variant: "8"
+      file: "variants/algo_leds.yml"
+    delay: "700ms" 
+  - id: "25"
+    algo:
+      variant: "1"
+      file: "variants/algo_leds.yml"
+    delay: "750ms"
+  - id: "26"
+    algo:
+      variant: "2"    
+      file: "variants/algo_leds.yml"
+    delay: "800ms"
+  - id: "27"
+    algo:
+      variant: "3"
+      file: "variants/algo_leds.yml"
+    delay: "850ms"
+  - id: "28"
+    algo:
+      variant: "4"
+      file: "variants/algo_leds.yml"
+    delay: "900ms"
+  - id: "29"
+    algo:
+      variant: "5"
+      file: "variants/algo_leds.yml"
+    delay: "950ms"
+  - id: "30"
+    algo:
+      variant: "6"
+      file: "variants/algo_leds.yml"
+    delay: "1000ms"
