--- a/templates/lab1-two-leds-in-time.yml
+++ b/templates/lab1-two-leds-in-time.yml
@@ -2,7 +2,8 @@ name: Blinky test two leds
 version: 1
 
 steps:
-  - wait-serial: 'Setup ended' 
+# wait for setup
+  - delay: 1000ms
 # button press
   - set-control:
       part-id: {{ .btn1 }}
