--- a/templates/lab1-one-led-in-time.yml
+++ b/templates/lab1-one-led-in-time.yml
@@ -16,23 +16,42 @@ steps:
       value: 0
   - delay: 200ms
 # leds test
-  - delay: 100ms
-  - delay: 100ms
-  - delay: 100ms
-  - delay: 100ms
-  - delay: 100ms
-  - delay: 100ms
-  - delay: 100ms
-  - delay: 100ms
-  - delay: 100ms
-  - delay: 100ms
-  - delay: 100ms
-  - delay: 100ms
-  - delay: 100ms
-  - delay: 100ms
-  - delay: 100ms
-  - delay: 100ms
-  - delay: 100ms
-  - delay: 100ms
-  - delay: 100ms
-  - delay: 100ms
+  - expect-pin:
+      part-id: {{ .led1 }}
+      pin: A
+      value: 1
+  - delay: {{ .led_delay }}
+  - expect-pin:
+      part-id: {{ .led2 }}
+      pin: A
+      value: 1
+  - delay: {{ .led_delay }}
+  - expect-pin:
+      part-id: {{ .led3 }}
+      pin: A
+      value: 1
+  - delay: {{ .led_delay }}
+  - expect-pin:
+      part-id: {{ .led4 }}
+      pin: A
+      value: 1
+  - delay: {{ .led_delay }}
+  - expect-pin:
+      part-id: {{ .led5 }}
+      pin: A
+      value: 1
+  - delay: {{ .led_delay }}
+  - expect-pin:
+      part-id: {{ .led6 }}
+      pin: A
+      value: 1
+  - delay: {{ .led_delay }}
+  - expect-pin:
+      part-id: {{ .led7 }}
+      pin: A
+      value: 1
+  - delay: {{ .led_delay }}
+  - expect-pin:
+      part-id: {{ .led8 }}
+      pin: A
+      value: 
